# opencv-android-demo

opencv-java/: README.md
opencv-java/app/: build.gradle
opencv-java/app/src/androidTest/java/com/nex3z/examples/opencvjava/: ExampleInstrumentedTest.java
opencv-java/app/src/main/: AndroidManifest.xml
opencv-java/app/src/main/java/com/nex3z/examples/opencvjava/: CameraActivity.java  ImageActivity.java  MainActivity.java  PermissionUtil.java
opencv-java/app/src/main/res/layout/: activity_camera.xml  activity_image.xml  activity_main.xml
opencv-java/app/src/main/res/values/: strings.xml
opencv-java/app/src/test/java/com/nex3z/examples/opencvjava/: ExampleUnitTest.java
opencv-java/gradle/wrapper/: gradle-wrapper.properties
opencv-native/app/: CMakeLists.txt  build.gradle
opencv-native/app/src/androidTest/java/com/nex3z/examples/opencvnative/: ExampleInstrumentedTest.java
opencv-native/app/src/main/: AndroidManifest.xml
opencv-native/app/src/main/cpp/: image-lib.cpp
opencv-native/app/src/main/java/com/nex3z/examples/opencvnative/: ImageUtil.java  MainActivity.java
opencv-native/app/src/main/res/layout/: activity_main.xml
opencv-native/app/src/main/res/values/: strings.xml
opencv-native/app/src/test/java/com/nex3z/examples/opencvnative/: ExampleUnitTest.java
opencv-native/gradle/wrapper/: gradle-wrapper.properties
